--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "intervention/image": "^2.4",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
+        "renatomarinho/laravel-page-speed": "^1.8",
         "spatie/laravel-responsecache": "^4.1",
         "spatie/laravel-sitemap": "^3.3"
     },
