--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,5 @@
 {
     "/js/app.js": "/js/app.js",
     "/css/app.css": "/css/app.css",
-    "/css/critical.css": "/css/critical.css",
-    "/css/bootstrap-datetimepicker.css": "/css/bootstrap-datetimepicker.css"
+    "/css/critical.css": "/css/critical.css"
 }
