--- a/composer.json
+++ b/composer.json
@@ -43,6 +43,9 @@
         }
     },
     "scripts": {
+        "post-install-cmd": [
+            "php artisan clear-compiled", "php artisan optimize", "chmod -R 777 storage"
+        ],
         "post-root-package-install": [
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
         ],
